--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,6 @@
-<h2>Eevote</h2>
-<p>
-  The time is now: <%= Time.now %>
-</p>
+<div class="jumbotron">
+  <h1 class="display-3">Hello, world!</h1>
+  <p class="lead">This is a simple placeholder, a simple misdirecting component for calling extra attention to featured content or information while I get the voting app done.</p>
+  <hr class="m-y-2">
+  <p>It uses utility classes for typography and spacing to space content out within the larger container. Neat o!</p>
+</div>
