Changes bootstrap version from 4 to 3 and adds Yeti theme

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,5 @@
+@import "bootstrap-sprockets";
+@import "bootswatch/_variables.scss";
 @import "bootstrap";
-@import "custom";
+@import "bootswatch/_bootswatch.scss";
+@import "custom.scss"
