--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,7 @@
-<div class="jumbotron">
-  <h1 class="display-3">VALidated VOting</h1>
-  <p class="lead">This is a simple placeholder, a simple misdirecting component for calling extra attention to featured content or information while I get the voting app done.</p>
-  <hr class="m-y-2">
-  <p>It uses utility classes for typography and spacing to space content out within the larger container. Neat o!</p>
+<div class="container">
+  <div class="jumbotron">
+    <h1>Valid voting</h1>
+    <p>Something will appear here soonish.</p>
+    <p><a class="btn btn-primary btn-lg">Plasebo button</a></p>
+  </div>
 </div>
