Updates welcome jumbotron

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,10 @@
 <div class="container">
   <div class="jumbotron">
     <h1>Valid voting</h1>
-    <p>Something will appear here soonish.</p>
-    <p><a class="btn btn-primary btn-lg">Plasebo button</a></p>
+    <p>Create a vote easily. Validate your vote anonymously.</p>
+    <p>
+      <a class="btn btn-primary btn-lg">Establish vote</a>
+      <a class="btn btn-primary btn-lg">Scan vote</a>
+    </p>
   </div>
 </div>
