Navbar, couple links

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,10 +1,8 @@
-<div class="container">
-  <div class="jumbotron">
-    <h1>Valid voting</h1>
-    <p>Create a vote easily. Validate your vote anonymously.</p>
-    <p>
-      <a class="btn btn-primary btn-lg">Establish vote</a>
-      <a class="btn btn-primary btn-lg">Scan vote</a>
-    </p>
-  </div>
+<div class="jumbotron">
+  <h1>Valid voting</h1>
+  <p>Create a vote where everyone can validate their vote.</p>
+  <p>
+    <a href="/votes/new" class="btn btn-primary btn-lg">Create</a>
+    <a class="btn btn-primary btn-lg">Scan</a>
+  </p>
 </div>
