--- a/app/views/votes/_form.html.erb
+++ b/app/views/votes/_form.html.erb
@@ -20,6 +20,6 @@
     <%= f.number_field :candidate_count, value: 2 %>
   </div>
   <div class="actions">
-    <%= f.submit 'Create Vote', :class => 'btn' %>
+    <%= f.submit 'Create Vote', :class => 'btn btn-primary btn-lg' %>
   </div>
 <% end %>
