--- a/app/views/votes/show.html.erb
+++ b/app/views/votes/show.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 <p>Candidates: <%= @vote.candidates.count %></p>
 <p>Voting forms: <%= @vote.voting_forms.count %></p>
+<p><%= link_to 'PDF', { controller: :votes, action: :show, format: :pdf }%></p>
 
 <%= link_to 'Back', votes_path %>
