Adds pdf stylesheet to precompilation for Heroku

--- a/app/views/votes/show.pdf.erb
+++ b/app/views/votes/show.pdf.erb
@@ -1,4 +1,4 @@
-<%= wicked_pdf_stylesheet_link_tag "documents" %>
+<%= wicked_pdf_stylesheet_link_tag "pdf" %>
 
 <div class="document">
   <h1>Voting flow control</h1>
