--- a/app/assets/stylesheets/pdf.css.scss.erb
+++ b/app/assets/stylesheets/pdf.css.scss.erb
@@ -1,3 +1,34 @@
 div.page-break {
   page-break-before: always;
 }
+
+.candidate-list {
+  float:left;
+  height:100%;
+  width:49%;
+  border-right: dashed 1px;
+}
+
+.voting-receipt {
+  float:right;
+  height:100%;
+  width:49%;
+  text-align: center;
+
+}
+
+.circle {
+  margin: 200px 0 0 30px;
+  width: 300px;
+  height: 300px;
+  border: 2px solid;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+
+  .label {
+    margin-top: 45%;
+    margin-left: 20%;
+    text-align: left;
+  }
+}
