Adds color to jumbotron title and show actions for voting forms

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,10 +1,11 @@
-body {
+.brand-color {
+  color: $brand-primary;
 }
 
 .icon-bar {
-   background-color:$brand-primary;
+   background-color: $brand-primary;
 }
 
 .navbar-brand {
-  color:$brand-primary!important;
+  color: $brand-primary!important;
 }
