--- a/app/views/voting_forms/show.html.erb
+++ b/app/views/voting_forms/show.html.erb
@@ -1,4 +1,3 @@
 <p id="notice"><%= notice %></p>
 
-<%= link_to 'Edit', edit_voting_form_path(@voting_form) %> |
-<%= link_to 'Back', voting_forms_path %>
+<%= link_to 'Back', vote_voting_forms_path %>
