--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-  <h1>Valid voting</h1>
+  <h1><span class="brand-color">Val</span>id <span class="brand-color">vo</span>ting</h1>
   <p>Create a vote where everyone can validate their vote.</p>
   <p>
     <%= link_to 'Create', { controller: :votes, action: :new }, class: 'btn btn-primary btn-lg' %>
