--- a/app/views/votes/_voting_flow_control.pdf.erb
+++ b/app/views/votes/_voting_flow_control.pdf.erb
@@ -1,6 +1,7 @@
 <div>
   <h1>Voting flow control</h1>
-  <p><%= url_for(controller: 'votes', action: 'show', host: request.host_with_port) %></p>
-  <p>QR-code for opening vote</p>
-  <p>QR-code for closing vote</p>
+  <p>Start vote here:</p>
+  <p><%= url_for(controller: 'voting_initiations', vote_id: @vote.id , host: request.host_with_port) %></p>
+  <p>End vote here:</p>
+  <p><%= url_for(controller: 'voting_conclusions', vote_id: @vote.id , host: request.host_with_port) %></p>
 </div>
