--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron">
   <h1><span class="brand-color">Val</span>id <span class="brand-color">vo</span>ting</h1>
-  <p>Create a vote where everyone can validate their vote.</p>
+  <p>Simple voting where voters can validate their votes</p>
   <p>
     <%= link_to 'Create', { controller: :votes, action: :new }, class: 'btn btn-primary btn-lg' %>
   </p>
