--- a/app/views/votes/_voting_flow_control.pdf.erb
+++ b/app/views/votes/_voting_flow_control.pdf.erb
@@ -1,33 +1,10 @@
 <div>
   <h1>Voting flow control</h1>
   <p>Start vote here:</p>
-  <p class="qr">
-    <%==
-      RQRCode::QRCode.new(
-        url_for(controller: 'voting_initiations', vote_id: @vote.id , host: request.host_with_port),
-        :size => 10,
-        :level => :h
-        ).as_svg(
-          offset: 0,
-          color: '000',
-          shape_rendering: 'crispEdges',
-          module_size: 4
-        )
-    %>
+  <%= render partial: "qr_code", locals: { url:
+      url_for(controller: 'voting_initiations', vote_id: @vote.id , host: request.host_with_port)} %>
   </p>
   <p>End vote here:</p>
-  <p class="qr">
-    <%==
-      RQRCode::QRCode.new(
-        url_for(controller: 'voting_conclusions', vote_id: @vote.id , host: request.host_with_port),
-        :size => 10,
-        :level => :h
-        ).as_svg(
-          offset: 0,
-          color: '000',
-          shape_rendering: 'crispEdges',
-          module_size: 4
-        )
-    %>
-  </p>
+  <%= render partial: "qr_code", locals: { url:
+      url_for(controller: 'voting_conclusions', vote_id: @vote.id , host: request.host_with_port)} %>
 </div>
