--- a/app/views/votes/_voting_receipt.pdf.erb
+++ b/app/views/votes/_voting_receipt.pdf.erb
@@ -1,5 +1,7 @@
 <div class="voting-receipt">
   <h1>Voting receipt</h1>
+  <%= render partial: "qr_code", locals: { url:
+    url_for(controller: 'voting_forms', action: :show, vote_id: @vote.id, host: request.host_with_port)} %>
   <div class="circle">
     <h2 class="label">
       no.
