--- a/app/views/votes/_voting_form.pdf.erb
+++ b/app/views/votes/_voting_form.pdf.erb
@@ -1,4 +1,4 @@
 <div class="page-break">
-  <%= render partial: "candidate_list", locals: { vote: @vote } %>
+  <%= render partial: "candidate_list", locals: { vote: @vote, form: form } %>
   <%= render partial: "voting_receipt", locals: { form: form } %>
 </div>
