--- a/app/views/votes/_voting_flow_control.pdf.erb
+++ b/app/views/votes/_voting_flow_control.pdf.erb
@@ -2,9 +2,9 @@
   <h1>Voting flow control</h1>
   <p>Start vote here:</p>
   <%= render partial: "qr_code", locals: { url:
-      url_for(controller: 'voting_initiations', vote_id: @vote.id , host: request.host_with_port)} %>
+      url_for(controller: 'voting_starts', action: :new, vote_id: @vote.id , host: request.host_with_port)} %>
   </p>
   <p>End vote here:</p>
   <%= render partial: "qr_code", locals: { url:
-      url_for(controller: 'voting_conclusions', vote_id: @vote.id , host: request.host_with_port)} %>
+      url_for(controller: 'voting_ends', action: :new, vote_id: @vote.id , host: request.host_with_port)} %>
 </div>
