--- a/app/views/voting_forms/show.html.erb
+++ b/app/views/voting_forms/show.html.erb
@@ -1,11 +1,17 @@
 <p id="notice"><%= notice %></p>
 
 <% if @voting_form.vote.is_ongoing? %>
-  <h1>You can vote</h1>
-  <p>Vote for _</p>
+  <% if @voting_form.voting_decision.nil? %>
+    <h1>You can vote</h1>
+    <p>Vote for _</p>
+    <%= render 'form', voting_form_id: @voting_form.id %>
+  <% else %>
+    <h1>You have voted</h1>
+  <% end %>
 <% elsif @voting_form.vote.has_ended? %>
   <h1>Voting has ended</h1>
-  <p>You voted for _</p>
+  <p>You voted for</p>
+  <%= @voting_form.voting_decision.candidate %>
   <p>See results</p>
 <% else %>
   <h1>Voting has not started yet</h1>
