--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,5 @@
+<%= render partial: "shared/notice", locals: { notice: notice } %>
+
 <div class="jumbotron">
   <h1><span class="brand-color">Val</span>id <span class="brand-color">Vo</span>ting</h1>
   <p>Simple voting where voters can validate their votes</p>
