--- a/app/views/votes/new.html.erb
+++ b/app/views/votes/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Vote</h1>
-
-<%= render 'form', vote: @vote %>
-
-<%= link_to 'Back', votes_path %>
+<div class="well">
+  <%= render 'form', vote: @vote %>
+  <br>
+  <%= link_to 'Back', votes_path %>
+</div>
