--- a/app/views/votes/index.html.erb
+++ b/app/views/votes/index.html.erb
@@ -1,23 +1,7 @@
 <%= render partial: "shared/notice", locals: { notice: notice } %>
-
-<h1>Votes</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @votes.each do |vote| %>
-      <tr>
-        <td><%= link_to 'Show', vote %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Vote', new_vote_path %>
+<div class="well">
+  <legend>Votings</legend>
+  <%= render partial: "votes_table", locals: { votes: @votes } %>
+  <br>
+  <%= link_to 'New Vote', new_vote_path %>
+</div>
