--- a/app/views/votes/_results.html.erb
+++ b/app/views/votes/_results.html.erb
@@ -1,3 +1,20 @@
-<% candidates.each do |candidate| %>
-  <p><%= "#{candidate.name}: #{candidate.voting_decisions.count} votes" %></p>
-<% end %>
+<legend>Results</legend>
+<table class="table table-striped table-hover">
+  <thead>
+    <tr>
+      <th>#</th>
+      <th>Name</th>
+      <th>Votes</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% candidates.each_with_index do |candidate, i| %>
+      <tr>
+        <td><%= i + 1 %></td>
+        <td><%= candidate.name %></td>
+        <td><%= candidate.voting_decisions.count %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
