--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,11 +1,20 @@
-.brand-color {
-  color: $brand-primary;
+html, body {
+  height: 100%;
 }
 
-.icon-bar {
-   background-color: $brand-primary;
+#wrap {
+  min-height: 100%;
 }
 
-.navbar-brand {
-  color: white!important;
+#main {
+  overflow:auto;
+  padding-bottom:150px; /* this needs to be bigger than footer height*/
+}
+
+.footer {
+  position: relative;
+  margin-top: -150px; /* negative value of footer height */
+  height: 150px;
+  clear:both;
+  padding-top:20px;
 }
