--- a/app/views/votes/_votes_table.html.erb
+++ b/app/views/votes/_votes_table.html.erb
@@ -4,7 +4,7 @@
       <th>#</th>
       <th>Name</th>
       <th>Status</th>
-      <th>Created at</th>
+      <th>Created</th>
       <th>Forms</th>
       <th>Candidates</th>
     </tr>
@@ -16,7 +16,7 @@
         <td><%= i + 1 %></td>
         <td><%= link_to "Voting#{i + 1}", vote %></td>
         <td><%= vote.status %></td>
-        <td><%= vote.created_at.to_formatted_s(:short) %></td>
+        <td><%= time_ago_in_words(vote.created_at) %> ago</td>
         <td><%= vote.voting_forms.count %></td>
         <td><%= vote.candidates.count %></td>
       </tr>
