Fixes for voting form update

--- a/app/views/votes/_results.html.erb
+++ b/app/views/votes/_results.html.erb
@@ -13,7 +13,7 @@
       <tr>
         <td><%= i + 1 %></td>
         <td><%= candidate.name %></td>
-        <td><%= candidate.voting_decisions.count %></td>
+        <td><%= candidate.votes %></td>
       </tr>
     <% end %>
   </tbody>
