--- a/app/views/voting_forms/show.html.erb
+++ b/app/views/voting_forms/show.html.erb
@@ -1,18 +1,9 @@
 <%= render partial: "shared/notice", locals: { notice: notice } %>
 
 <% if @voting_form.vote.is_ongoing? %>
-  <% if @voting_form.voting_decision.nil? %>
-    <h1>You can vote</h1>
-    <%= render 'form', voting_form_id: @voting_form.id %>
-  <% else %>
-    <h1>You have voted</h1>
-    <p>You can view voting results here after voting has ended</p>
-  <% end %>
+  <%= render partial: "ongoing", locals: { voting_form: @voting_form } %>
 <% elsif @voting_form.vote.has_ended? %>
-  <h1>Voting has ended</h1>
-  <p>You voted for:</p>
-  <p><%= @voting_form.voting_decision.candidate.name %></p>
-  <p><%= link_to 'Results', @voting_form.vote %></p>
+  <%= render partial: "ended", locals: { voting_form: @voting_form } %>
 <% else %>
-  <h1>Voting has not started yet</h1>
+  <%= render partial: "unstarted" %>
 <% end %>
