Clears voting form labels

--- a/app/views/votes/_form.html.erb
+++ b/app/views/votes/_form.html.erb
@@ -14,11 +14,11 @@
       <% end %>
 
       <div class="field">
-        <%= f.label :voting_form_count %><br>
+        <%= f.label :How_many_voters? %><br>
         <%= f.number_field :voting_form_count, value: 2 %>
       </div>
       <div class="field">
-        <%= f.label :candidate_count %><br>
+        <%= f.label :How_many_candidates? %><br>
         <%= f.number_field :candidate_count, value: 2 %>
       </div>
       <br>
