--- a/app/assets/stylesheets/pdf.css.scss.erb
+++ b/app/assets/stylesheets/pdf.css.scss.erb
@@ -1,3 +1,7 @@
+#pdf {
+  font-family: "Source Code Pro", Arial, monospace;
+}
+
 div.page-break {
   page-break-before: always;
 }
@@ -18,9 +22,9 @@ div.page-break {
 }
 
 .circle {
-  margin: 100px 0 0 30px;
-  width: 300px;
-  height: 300px;
+  margin: 30px 0 0 43px;
+  width: 250px;
+  height: 250px;
   border: 2px solid;
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
