--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
 <footer class="container footer">
   <hr>
-  <span class="text-muted">Footer stuff here...</span>
+  <span class="text-muted">Penguin Voting</span>
 </footer>
