--- a/app/views/votes/show.pdf.erb
+++ b/app/views/votes/show.pdf.erb
@@ -1,7 +1,9 @@
 <%= wicked_pdf_stylesheet_link_tag "pdf" %>
 
-<%= render partial: "voting_flow_control", locals: { vote: @vote } %>
+<div id="pdf">
+  <%= render partial: "voting_flow_control", locals: { vote: @vote } %>
 
-<% @vote.voting_forms.each do |form| %>
-  <%= render partial: "voting_form", locals: { form: form, vote: @vote }%>
-<% end %>
+  <% @vote.voting_forms.each do |form| %>
+    <%= render partial: "voting_form", locals: { form: form, vote: @vote }%>
+  <% end %>
+</div>
