--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,11 +1,18 @@
 <%= render partial: "shared/notice", locals: { notice: notice } %>
 
 <div class="jumbotron">
-  <h1><span class="brand-color">Val</span>id <span class="brand-color">Vo</span>ting</h1>
-  <p>Simple voting where voters can validate their votes</p>
-  <p>
+  <h1><span class="brand-color">Val</span>id <span class="brand-color">Vo</span>te</h1>
+  <h3>Simple way of organizing better votings!</h3>
+  <br/>
+  <br/>
+  <br/>
+  <div class="container">
     <%= link_to 'Paper voting', { controller: :votes, action: :new }, class: 'btn btn-primary btn-lg' %>
+  </div>
+  <div class="container">
     <button type="button" class="btn btn-disabled btn-lg">Internet voting</button>
+  </div>
+  <div class="container">
     <button type="button" class="btn btn-disabled btn-lg">Voting machines</button>
-  </p>
+  </div>
 </div>
