--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,13 +6,11 @@
   <br/>
   <br/>
   <br/>
-  <div class="container">
-    <%= link_to 'Paper voting', { controller: :votes, action: :new }, class: 'btn btn-primary btn-lg' %>
-  </div>
-  <div class="container">
-    <button type="button" class="btn btn-disabled btn-lg">Internet voting</button>
-  </div>
-  <div class="container">
-    <button type="button" class="btn btn-disabled btn-lg">Voting machines</button>
+  <div class="container row">
+    <%= link_to({ controller: :votes, action: :new }, class: "btn btn-primary btn-lg") do%>
+      Paper Voting <%= icon('info-circle')%>
+    <% end%>
+    <button type="button" class="btn btn-disabled btn-lg">Internet voting <%= icon('info-circle')%></button>
+    <button type="button" class="btn btn-disabled btn-lg">Voting machines <%= icon('info-circle')%></button>
   </div>
 </div>
