--- a/app/assets/stylesheets/bootswatch/_variables.scss
+++ b/app/assets/stylesheets/bootswatch/_variables.scss
@@ -15,12 +15,11 @@ $gray:                   #6f6f6f !default; // #555
 $gray-light:             lighten($gray-base, 60%) !default;   // #999
 $gray-lighter:           lighten($gray-base, 93.5%) !default; // #eee
 
-// $brand-primary:         #008cba !default;
 $brand-primary:         #f46524 !default;
-$brand-success:         #43ac6a !default;
-$brand-info:            #5bc0de !default;
-$brand-warning:         #E99002 !default;
-$brand-danger:          #F04124 !default;
+$brand-success:         #18a570 !default;
+$brand-info:            #21639e !default;
+$brand-warning:         #f49e24 !default;
+$brand-danger:          #f04124 !default;
 
 
 //== Scaffolding
