--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -16,13 +16,12 @@
         <li class="About">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">About <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Info</a></li>
-            <li><a href="#">More info</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
+            <li>
+              <a href="http://sciprojektivoting.blogspot.fi/" target="_blank" >
+                <%= icon('heart')%>
+                Blog
+              </a>
+            </li>
           </ul>
         </li>
       </ul>
