Badge icon updates

--- a/app/views/votes/show.html.erb
+++ b/app/views/votes/show.html.erb
@@ -13,11 +13,11 @@
     <%= @vote.status %>
   </span>
   <span class="badge">
-    <%= icon('qrcode')%>
+    <%= icon('file')%>
     <%= "#{@vote.voting_forms.count} forms" %>
   </span>
   <span class="badge">
-    <%= icon('user-circle-o')%>
+    <%= icon('users')%>
     <%= "#{@vote.candidates.count} candidates" %>
   </span>
 </legend>
