--- a/app/assets/stylesheets/bootswatch/_variables.scss
+++ b/app/assets/stylesheets/bootswatch/_variables.scss
@@ -18,7 +18,7 @@ $gray-lighter:           lighten($gray-base, 93.5%) !default; // #eee
 $brand-primary:         #f46524 !default;
 $brand-success:         #18a570 !default;
 $brand-info:            #21639e !default;
-$brand-warning:         #f49e24 !default;
+$brand-warning:         #f46524 !default;
 $brand-danger:          #f04124 !default;
 
 
