--- a/app/views/votes/_form.html.erb
+++ b/app/views/votes/_form.html.erb
@@ -58,7 +58,7 @@
       </div>
       <br>
       <div class="actions">
-        <%= f.submit 'Create', :class => 'btn btn-success' %>
+        <%= f.submit 'Create', :class => 'btn btn-primary' %>
       </div>
   </fieldset>
 <% end %>
