--- a/app/views/votes/_form.html.erb
+++ b/app/views/votes/_form.html.erb
@@ -6,16 +6,17 @@
           <h2><%= pluralize(vote.errors.count, "error") %> prohibited this vote from being saved:</h2>
 
           <ul>
-          <% vote.errors.full_messages.each do |message| %>
-            <li><%= message %></li>
-          <% end %>
+            <% vote.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
           </ul>
         </div>
       <% end %>
 
       <div class="input-group col-sm-6">
         <span class="input-group-addon"><%= icon('font')%></span>
-        <input type="text" class="form-control" name="title" placeholder="Title">
+        <%= f.text_field :title, placeholder: 'Title', class: 'form-control'%>
+        <!--input type="text" class="form-control" name="title" placeholder="Title"-->
         <span class="input-group-addon"><%= icon('info-circle')%></span>
       </div>
       </br>
