--- a/app/views/votes/show.html.erb
+++ b/app/views/votes/show.html.erb
@@ -21,6 +21,10 @@
     <%= "#{@vote.candidates.count} candidates" %>
   </span>
 </legend>
+<% if @vote.title%>
+  <div class="lead">Name: <%= @vote.title%></div>
+<%end%>
+<div class="lead">Created: <%= time_ago_in_words(@vote.created_at) %> ago</div>
 <%= link_to({ controller: :votes, action: :show, format: :pdf }) do%>
   <%= icon('file-pdf-o')%> PDF
 <%end%>
