--- a/app/views/shared/_notice.html.erb
+++ b/app/views/shared/_notice.html.erb
@@ -1,6 +1,7 @@
 <% if notice %>
   <div class="alert alert-dismissible alert-success">
     <button type="button" class="close" data-dismiss="alert">&times;</button>
+    <%= icon('thumbs-up')%>
     <%= notice %>
   </div>
 <% end %>
